= CHANGES

== Edge

- NEW #1789 Relax Tilt version to allow Tilt 2 (>= 1.4.1, < 3)

== 0.13.1 (January 17th 2016)

- FIX #1978 Enable reloading of custom dependencies (@markglenfletcher)
- FIX Remove use of ActiveSupport in tests (@ujifgc)
- FIX #1982 Support nested query for expanding path (@namusyaka)
- FIX #1994 Missing new line in mocha generator (@peter50216)
- FIX #1995 Invalid german dates (@ujifgc)
- FIX #1998 Only output a warning message if the spec task is invoked (@postmodern)
- FIX #2000 Fix mutex handling for Ruby 2.3 (@tyabe)

== 0.13.1.beta1 (October 18th 2015)

- FIX #1975 Improve routing memory usage and performance (@namusyaka)
- FIX #1882 test for selected values for select tag (@ujifgc)
- FIX rendering exception for custom mime types (@nesquena)
- FIX relax mail gem dependency (@ujifgc)
- FIX minor doc typos (@lokyoung, @markglenfletcher)

== 0.13.0 (October 11th 2015)

- FIX #1614 Do not search for caller in bundler lib (@ujifgc)
- FIX #1796 Save and restore layout setting (@ujifgc)
- FIX #1882 Fix ambiguous selected items in "select_tag" (@nesquena)
- FIX #1965 Fail properly on wrong mailer name or message (@ujifgc)
- FIX #1959 simplify the mounter class (@dnesteryuk)
- FIX #1916 Check key existence on caching (@namusyaka)
- NEW #1946 Documentation fixes re default renderer is now none (@Quintasan)
- FIX #942 remove ar:auto:upgrade (@ujifgc)
- NEW #1919 allow configuring log file path
- FIX #1931 render partials in mail if padrino-helpers is available (@ujifgc)
- FIX #1950 Padrino now follows Sinatra's charset policy (@ujifgc)
- NEW #1909 Basic project configuration engine (@ujifgc)
- NEW #1966 sample benchmark test of padrino core (@ujifgc)

== 0.13.0.beta3 (August 2nd 2015)

- NEW #1908 Adds test-unit as a test component (@namusyaka)
- FIX #1829 add absolute_url to app methods, add :base_url setting (@ujifgc)
- FIX #1880 rendering issue by accepting string content types (@ujifgc)